update: swagger with missing status codes
