# docs/swagger.yaml
@@ -130,11 +130,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: login successful
           schema:
             $ref: '#/definitions/handlers.SessionDocument'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ApiError'
+        "429":
+          description: Too Many Requests
           schema:
             $ref: '#/definitions/handlers.ApiError'
         "500":
